--- a/_includes/404.html
+++ b/_includes/404.html
@@ -124,6 +124,6 @@
   </svg>
 
   <h3>Page not Found!</h3>
-  <a class="btn btn-outline-primary mt-1" href="{{ site.baseurl }}/">Go Back Home</a>
+  <a class="btn btn-outline-primary mt-1" href="{{ site.baseurl }}/">Home</a>
 
 </div>
