--- a/_includes/about/timeline.html
+++ b/_includes/about/timeline.html
@@ -5,7 +5,7 @@
         <div class="content">
           <h2>{{ item.title }}</h2>
           <h6 class="date">{{ item.from }} — {{ item.to }}</h6>
-          <p>{{ item.description }}</p>
+          <p align="justify">{{ item.description }}</p>
         </div>
       </div>
     {% endfor %}
