change justify about

--- a/_includes/about/timeline.html
+++ b/_includes/about/timeline.html
@@ -5,7 +5,13 @@
         <div class="content">
           <h2>{{ item.title }}</h2>
           <h6 class="date">{{ item.from }} — {{ item.to }}</h6>
-          <p align="justify">{{ item.description }}</p>
+          <p align="justify" style="text-indent:4em">{{ item.description }}</p>
+          <p align="justify" style="text-indent:4em">{{ item.description2 }}</p>
+          <p align="justify" style="text-indent:4em">{{ item.description3 }}</p>
+          <p align="justify" style="text-indent:4em">{{ item.description4 }}</p>
+          <p align="justify" style="text-indent:4em">{{ item.description5 }}</p>
+          <p align="justify" style="text-indent:4em">{{ item.description6 }}</p>
+          <p align="justify" style="text-indent:4em">{{ item.description7 }}</p>
         </div>
       </div>
     {% endfor %}
