--- a/_includes/projects/project-card.html
+++ b/_includes/projects/project-card.html
@@ -10,7 +10,7 @@
           {% endif %}
         {{ project_name }}
       </h5>
-      <p id="{{ project_id }}-desc" class="card-text">{{ project_desc }}</p>
+      <p id="{{ project_id }}-desc" class="card-text" align="justify" style="text-indent:2em">{{ project_desc }}</p>
       <p id="{{ project_id }}-tools" class="card-text">
         {% for tool in project_tools %}
         <span class="badge badge-pill text-primary border border-primary">{{ tool }}</span>
