--- a/_includes/projects/project-card.html
+++ b/_includes/projects/project-card.html
@@ -4,7 +4,7 @@
     <img id="{{ project_id }}-img" class="card-img-top" src="{{ project_img }}" alt="{{ project_name }}" />
     {% endif %}
     <div class="card-body">
-      <h5 id="{{ project_id }}-name" class="card-title">
+      <h5 id="{{ project_id }}-name" class="card-title" align="center">
           {% if project_type == "remote" %}
           <i class="fab fa-github" data-toggle="tooltip" data-placement="bottom" data-delay="250" title="GitHub Repository"></i> |
           {% endif %}
