--- a/_includes/about/timeline.html
+++ b/_includes/about/timeline.html
@@ -5,13 +5,13 @@
         <div class="content">
           <h2>{{ item.title }}</h2>
           <h6 class="date">{{ item.from }} — {{ item.to }}</h6>
-          <p align="justify" style="text-indent:3em">{{ item.description }}</p>
-          <p align="justify" style="text-indent:3em">{{ item.description2 }}</p>
-          <p align="justify" style="text-indent:3em">{{ item.description3 }}</p>
-          <p align="justify" style="text-indent:3em">{{ item.description4 }}</p>
-          <p align="justify" style="text-indent:3em">{{ item.description5 }}</p>
-          <p align="justify" style="text-indent:3em">{{ item.description6 }}</p>
-          <p align="justify" style="text-indent:3em">{{ item.description7 }}</p>
+          <div align="justify" style="text-indent:3em">{{ item.description }}</div>
+          <div align="justify" style="text-indent:3em">{{ item.description2 }}</div>
+          <div align="justify" style="text-indent:3em">{{ item.description3 }}</div>
+          <div align="justify" style="text-indent:3em">{{ item.description4 }}</div>
+          <div align="justify" style="text-indent:3em">{{ item.description5 }}</div>
+          <div align="justify" style="text-indent:3em">{{ item.description6 }}</div>
+          <div align="justify" style="text-indent:3em">{{ item.description7 }}</div>
         </div>
       </div>
     {% endfor %}
